--- a/resources/index.html
+++ b/resources/index.html
@@ -131,8 +131,11 @@
       </section>
       <nav class="bottom-nav">
         <div id="bottomInfo-div" class="flex" style="width: inherit; display: none;">
-          <div class="flex justify-start gap" style="width: 60%; overflow: hidden; text-overflow: ellipsis;">
+          <div class="flex justify-start gap" style="width: 40%; overflow: hidden; text-overflow: ellipsis;">
             <span data-fileInfo="path"></span>
+          </div>
+          <div class="flex justify-center gap" style="width: 20%; overflow: hidden; text-overflow: ellipsis; text-align: center;">
+            <span id="bottomNavShortInfo-span"></span>
           </div>
           <div class="flex justify-end gap" style="min-width: fit-content; width: 40%; overflow: hidden; text-overflow: ellipsis;">
             <span>Ln: </span><span data-editorInfo="currentLine"></span>
