--- a/resources/index.html
+++ b/resources/index.html
@@ -63,6 +63,7 @@
             <fluent-button id="moreOptions-fluent-button" appearance="stealth" onclick="toggleNodeDisplay('#moreOptions-fluent-menu')" onblur="hideNode('#moreOptions-fluent-menu')"><span class="fluent-icon fluent-icon--More"></span></fluent-button>
             <fluent-menu id="moreOptions-fluent-menu" style="display: none;">
               <fluent-menu-item onclick="EditorManager.undo();"><div class="flex gap"><span class="fluent-icon fluent-icon--Undo"></span><span>Undo</span></div></fluent-menu-item>
+              <fluent-menu-item onclick="EditorManager.redo();"><div class="flex gap"><span class="fluent-icon fluent-icon--Redo"></span><span>Redo</span></div></fluent-menu-item>
               <fluent-divider></fluent-divider>
               <fluent-menu-item onclick="FileManager.closeAllFiles();"><div class="flex gap"><span class="fluent-icon fluent-icon--ChromeClose"></span><span>Close all files</span></div></fluent-menu-item>
               <fluent-divider></fluent-divider>
