--- a/resources/index.html
+++ b/resources/index.html
@@ -193,7 +193,7 @@
           </div>
         </div>
         <div>
-          <fluent-button appearance="stealth" onclick='Neutralino.events.dispatch("windowClose", {shouldCloseApp: false}); Neutralino.app.restartProcess();'>
+          <fluent-button appearance="stealth" onclick='Neutralino.events.dispatch("windowClose", {closeType: "RESTART"});'>
             <span class="fluent-icon fluent-icon--Sync"></span>
           </fluent-button>
         </div>
