--- a/resources/index.html
+++ b/resources/index.html
@@ -99,7 +99,7 @@
         </nav>
         <article id="editor-article" class="editor-article" style="display: none;"></article>
         <article id="editorStartPage-article" class="editor-article">
-          <div class="flex" style="flex-wrap: wrap; width: 100%; padding: 40px; gap: 20px; overflow-x: hidden;">
+          <div class="flex" style="flex-wrap: wrap; width: 100%; padding: 60px 80px; gap: 40px; overflow-x: hidden;">
             <div class="flex flex-col" style="flex: 300px; gap: 10px; width: calc(50% - 20px); height: 220px;">
               <header>Files</header>
               <fluent-card class="flex" style="padding: 10px; gap: 10px; min-width: 150px; max-width: 300px; height: 40px;" onclick="uploadFile();">
