--- a/resources/index.html
+++ b/resources/index.html
@@ -34,7 +34,7 @@
               <fluent-menu-item onmousedown="uploadFolder();"><div class="flex gap"><span class="fluent-icon fluent-icon--FabricFolderUpload"></span><span>Open directory</span></div></fluent-menu-item>
             </fluent-menu>
           </div>
-          <form class="padding-y gap" id="searchAndReplace-form" role="search" style="transition: width 1s ease-in-out; border-right: 1px solid var(--third-bg-color);"></form>
+          <form class="gap" id="searchAndReplace-form" role="search" style="transition: width 1s ease-in-out; width: auto;"></form>
           <div class="flex padding-y gap" style="border-right: 1px solid var(--third-bg-color);">
             <fluent-button id="createSplitView-fluent-button" appearance="stealth" onclick="createSplitView();"><span class="fluent-icon fluent-icon--ViewAll2"></span></fluent-button>
             <fluent-button id="exitSplitView-fluent-button" appearance="stealth" onclick="exitSplitView();" style="display: none;"><span class="fluent-icon fluent-icon--CellSplitVertical"></span></fluent-button> 
@@ -62,12 +62,12 @@
           <div class="padding-y">
             <fluent-button id="moreOptions-fluent-button" appearance="stealth" onclick="toggleNodeDisplay('#moreOptions-fluent-menu'); EditorManager.undoAndRedoInfo(EditorManager.activeEditorName)" onblur="hideNode('#moreOptions-fluent-menu')"><span class="fluent-icon fluent-icon--More"></span></fluent-button>
             <fluent-menu id="moreOptions-fluent-menu" style="display: none;">
-              <fluent-menu-item data-undoAndRedoInfo="undo" onmousedown="EditorManager.undo()" disabled="true"><div class="flex gap"><span class="fluent-icon fluent-icon--Undo"></span><span>Undo</span></div></fluent-menu-item>
-              <fluent-menu-item data-undoAndRedoInfo="redo" onmousedown="EditorManager.redo()" disabled="true"><div class="flex gap"><span class="fluent-icon fluent-icon--Redo"></span><span>Redo</span></div></fluent-menu-item>
+              <fluent-menu-item id="editorUndo-fluent-menu-item" data-undoAndRedoInfo="undo" onmousedown="EditorManager.undo()" disabled="true"><div class="flex gap"><span class="fluent-icon fluent-icon--Undo"></span><span>Undo</span></div></fluent-menu-item>
+              <fluent-menu-item id="editorRedo-fluent-menu-item" data-undoAndRedoInfo="redo" onmousedown="EditorManager.redo()" disabled="true"><div class="flex gap"><span class="fluent-icon fluent-icon--Redo"></span><span>Redo</span></div></fluent-menu-item>
               <fluent-divider></fluent-divider>
-              <fluent-menu-item onmousedown="FileManager.closeAllFiles();"><div class="flex gap"><span class="fluent-icon fluent-icon--PageRemove"></span><span>Close all files</span></div></fluent-menu-item>
+              <fluent-menu-item id="closeAllFiles-fluent-menu-item" onmousedown="FileManager.closeAllFiles();"><div class="flex gap"><span class="fluent-icon fluent-icon--PageRemove"></span><span>Close all files</span></div></fluent-menu-item>
               <fluent-divider></fluent-divider>
-              <fluent-menu-item onmousedown="modifyNodeAttribute('#fileProperties-fluent-dialog', 'hidden', false)"><div class="flex gap"><span class="fluent-icon fluent-icon--FileComment"></span><span>File properties</span></div></fluent-menu-item>
+              <fluent-menu-item id="fileProperties-fluent-menu-item" onmousedown="modifyNodeAttribute('#fileProperties-fluent-dialog', 'hidden', false)"><div class="flex gap"><span class="fluent-icon fluent-icon--FileComment"></span><span>File properties</span></div></fluent-menu-item>
             </fluent-menu>
           </div>
           <div>
