Change dialog sizes

--- a/resources/index.html
+++ b/resources/index.html
@@ -147,7 +147,7 @@
           </div>
         </div>
       </fluent-dialog>
-      <fluent-dialog id="settings-fluent-dialog" hidden="true">
+      <fluent-dialog id="settings-fluent-dialog" class="settings-fluent-dialog" hidden="true">
          <div style="width: 100%; height: 100%; padding: 10px;">
           <div class="flex" style="width: 100%; height: 40px;">
             <div class="flex justify-start" style="width: 50%;">
